tests/single_instruction_translation_validation/mcsema/register-variants-samereg/comiss_xmm_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:200:35: error: use of undefined value '@__remill_error'
  %23 = tail call %struct.Memory* @__remill_error(%struct.State* nonnull dereferenceable(3376) %1, i64 %22, %struct.Memory* %0) #21
                                  ^
0.02user 0.03system 0:00.06elapsed 91%CPU (0avgtext+0avgdata 27396maxresident)k
0inputs+16outputs (0major+3270minor)pagefaults 0swaps
